--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alarm Clock</title>
-  <script src="https://kit.fontawesome.com/2a38c5b79e.js" crossorigin="anonymous"></script>
+  <!-- For Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@500&display=swap"/>
+  <!-- For Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/2a38c5b79e.js" crossorigin="anonymous"></script>
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -27,7 +30,7 @@
       <div class="activeAlarms"></div>
     </div>
   </div>
-  
+  <!-- Script -->
   <script src="script.js"></script>
 
 </body>
